    linking against the latter. Closes: #746122
  * Fix word wrapping logic in dselect. Regression introduced in dpkg 1.17.3.
  * Fix possible out of bounds buffer read access in the error output on
    bogus ar member sizes.
  * Fix memory leaks in buffer_copy() on error conditions.
  * Test suite:
    - Improve C code coverage.
  * Fix non-security sensitive TOCTOU race in triggers database loading.
  * Fix non-security sensitive TOCTOU race in update-alternative alternative
    database loading.
  * Fix non-security sensitive TOCTOU race in update-alternative rename code.
  * Add a workaround to start-stop-daemon for bogus OpenVZ Linux kernels that
    prepend, instead of appending, the " (deleted)" marker in /proc/PID/exe.
    Closes: #731530
  * Move dpkg-architecture -L argument to the Commands --help output section.
  * Make dpkg-maintscript-helper print only once that we are moving a
    conffile, and not on every interim state transition. Closes: #747370
  * Do not use global match variables in perl code.

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

  [ Raphaël Hertzog ]
  * Let dpkg-source unpack additional tarballs in a deterministic order.
    Thanks to Samuel Bronson for the report. Closes: #747148

 -- Guillem Jover <guillem@debian.org>  Wed, 30 Apr 2014 08:56:29 +0200

dpkg (1.17.9) unstable; urgency=high

  [ Guillem Jover ]
  * Do not allow patch files with C-style encoded filenames. Closes: #746306
    Unconditionally fixes CVE-2014-0471.
  * Switch alternative database backups from xz to gzip. Closes: #746354
  * Do not leak long tar names on bogus or truncated archives.
  * Do not leak the filepackages iterator when a directory is used by other
    packages.
  * Fix short lived memory leaks in «dpkg-split --split».
  * Fix memory leak in unused Keybindings screen in dselect.
  * Do not leak color string on «dselect --color».
  * Fix memory leaks when parsing alternatives.