@@ -10,6 +10,7 @@ dpkg (1.17.10) UNRELEASED; urgency=low
   * Fix memory leaks in buffer_copy() on error conditions.
   * Test suite:
     - Improve C code coverage.
+    - Add template test cases for most perl modules.
   * Fix non-security sensitive TOCTOU race in triggers database loading.
   * Fix non-security sensitive TOCTOU race in update-alternative alternative
     database loading.
